# BombGuy-C-

./: BombGuy-Dokumentace.docx  README.md
Arduino programy/D&D-Final Homework/: D&D-Final Homework.ino
Arduino programy/binarni_pocitadlo/visualize/visualize/: visualize.ino
Arduino programy/binaryCounter/: solution.ino
Arduino programy/cviceni_6/solution/: solution.ino
Arduino programy/rozsvitLED/: rozsvitLED.ino
Arduino programy/sketch_apr14a/: sketch_apr14a.ino
Arduino programy/solution/: solution.ino
Arduino programy/stopwatch/: solution.ino
Arduino programy/visualize/visualize/: visualize.ino
Arduino programy/visualize/visualize/visualize/: visualize.ino
BombGuy-game/: BombGuy-game.sln
BombGuy-game/BombGuy-game/: Form1.Designer.cs  Form1.cs  Form2.cs  Program.cs
BombGuy-game/BombGuy-game/Properties/: Resources.Designer.cs
C# - projekty/BombGuy-game/BombGuy-game/: BombGuy-game.csproj  Form1.resx  Form2.Designer.cs
C# - projekty/BombGuy-game/BombGuy-game/Properties/: Resources.resx
C# - projekty/Kral_na_sachovnici2.0/: Kral_na_sachovnici2.0.csproj  Program.cs
C# - projekty/Pexeso/: Form1.cs
C# - projekty/Sokoban/: Program.cs
C# - projekty/TextJustifier/: DU_4.sln
C# - projekty/TextJustifier/DU_4/: DU_4.csproj  Program.cs
Neprocko - zápočtový program/: Dokumentace.md  sudoku.pl  testovací_data.txt
Pexeso/: Form1.Designer.cs  WinFormsApp1.sln
jinjaTemp/: ex2.txt  example2.j2  example3.j2  setup.cfg
jinjaTemp/src/templater/: main.py  templater.py
zapoctak/: Dokumentace.docx  Posledni_hra.txt  zapoctak.py
(+2 files in other folders)
