[metadata]
name = nswi177-jinja-templater
version = 0.0.1
author = Matěj Mezera
author_email = mat999999@seznam.cz
description = So smart jinja2 templater
long_description = file: README.md
long_description_content_type = text/markdown
url = https://d3s.mff.cuni.cz/teaching/nswi177/labs/
keywords = jinja2 templater
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires = 
	Jinja2==3.1.2
	MarkupSafe==2.1.1
	PyYAML==6.0
	roman==3.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    nswi177-jinja-templater = templater.main:main


